--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Gamer4Lyfe</title>
+		<!-- link to the main stylesheet -->
+		<link rel="StyleSheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
